Corrected spacing issues

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -74,6 +74,7 @@
     display: flex;
     justify-content: flex-end;
     flex-direction: row; 
+    margin-bottom: auto; 
   }
 
   .inputField {
